# RoboGuide

./: .gitignore  Dockerfile  INITIAL_SETUP.md  WORKFLOW.md  docker-compose.yml
ros2_ws/src/amr_gazebo/: CMakeLists.txt  package.xml  target_mover.py
ros2_ws/src/amr_gazebo/launch/: hallway_single_person.launch.py  hospital.launch.py  hospital_demo.launch.py  robo_guide.launch.py  test.launch.py  test_master.launch.py  test_obstacles.launch.py
ros2_ws/src/amr_gazebo/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/amr_gazebo/launch/log/: latest_build
ros2_ws/src/amr_gazebo/urdf/: hospital_amr.urdf  simple_robot.urdf
ros2_ws/src/amr_gazebo/worlds/: hallway_single_person.world  human_collision_test.world  test_obstacles.world
ros2_ws/src/amr_navigation/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/amr_navigation/config/: nav2_params.yaml  slam_params.yaml
ros2_ws/src/amr_navigation/launch/: nav2.launch.py  slam.launch.py
ros2_ws/src/amr_perception/: package.xml  setup.py
ros2_ws/src/amr_perception/amr_perception/: yolo_node.py
